# SOD100K

./: README.md
CSF/: forward.sh  main.py
CSF+Res2Net/: README.md  solver.py  train.sh
CSF+Res2Net/networks/: csf_res2net.py  gOctConv.py
CSF/dataset/: dataset.py
CSNet/: README.md  eval.py  test.py
CSNet/checkpoints/csnet-L-x1/: csnet-L-x1.pth.tar
CSNet/checkpoints/csnet-L-x2/: csnet-L-x2.pth.tar
CSNet/configs/: csnet-L-x1.yml  defaults.py
CSNet/model/: conv2d.py  csnet.py
CSNet/utils/: prepare_data.py  utils.py
CSNet_training/: README.md  eval.py  finetune.py  test.py  train.py
CSNet_training/SalMetric/: CMakeLists.txt  README.md  setup.py
CSNet_training/SalMetric/include/: sal_metric.hpp
CSNet_training/SalMetric/python/: salmetric.cpp  salmetric.pyx
CSNet_training/SalMetric/salmetric.egg-info/: PKG-INFO  SOURCES.txt
CSNet_training/SalMetric/src/: CMakeLists.txt  sal_metric.cpp
CSNet_training/configs/: csnet-L-x2.yml  csnet-L-x2_train.yml  defaults.py
CSNet_training/model/: conv2d.py  csnet.py
CSNet_training/model/utils/: parm_octconv_v2.py  simplesum_octconv.py
CSNet_training/utils/: prepare_data.py
